# dl-final-project

./: .gitignore  AGENTS.md  PROJECT_FOLDER_STRUCTURE.md  README.md  deep-research-report-literature.md  deep-research-report.md  dl-final-projesi-2026.docx  pyproject.toml
artifacts/: README.md
configs/: README.md  default.yaml  report_assets.yaml
data/: README.md
docs/: ARTIFACT_STANDARD.md  ASSIGNMENT_BRIEF.md  COMMANDS.md  DATASET_AUDIT.md  DECISIONS.md  EVALUATION_PROTOCOL.md  EXPERIMENT_REGISTRY.md  LESSONS_LEARNED.md  MODEL_CANDIDATES.md  PROJECT_CONTEXT.md  REPORTING_GUIDELINES.md
notebooks/: 04_sprint4_finetuned_transformer_features.ipynb  05_e3e_conservative_vit_finetuning.ipynb  06_e3h_tta_rot4.ipynb  07_e3i_simple_tta_rot4.ipynb  README.md
outputs/: README.md
scripts/: README.md  analyze_representation_similarity.py  audit_ham10000.py  create_mixed_feature_source.py  ensemble_predictions.py  evaluate_simple_tta_rot4.py  evaluate_tta_rot4.py  extract_features.py  finetune_backbone.py  make_lesion_split.py  run_fusion_matrix.py  smoke_dataloader.py  summarize_e3c_metadata.py  summarize_e3d_metadata_fusion.py  summarize_e3f_mixed_adaptation.py  summarize_s4b_multiseed.py  train_metadata_augmented_mlp.py  train_metadata_fusion_operator.py  train_mlp.py
src/: README.md
submission/: README.md
tests/: README.md  test_dataset_sprint1.py  test_e3c_metadata_augmented.py  test_e3d_metadata_fusion.py  test_e3h_tta.py  test_e3i_simple_tta.py  test_metadata_features.py  test_metadata_fusion_models.py  test_representation_complementarity.py  (+3 more)
(+101 files in other folders)
