[project]
name = "dl-final-transformers"
version = "0.1.0"
description = "Transformer feature extraction and feature fusion experiments for HAM10000."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.5",
    "timm>=1.0",
    "torch>=2.4",
    "torchvision>=0.19",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
